RESOLVED FIXED128881
setSelectionRange shouldn't directly instantiate VisibleSelection
https://bugs.webkit.org/show_bug.cgi?id=128881
Summary setSelectionRange shouldn't directly instantiate VisibleSelection
Ryosuke Niwa
Reported 2014-02-15 20:19:18 PST
This triggers synchronous layout.
Attachments
Fixes the bug (4.21 KB, patch)
2014-02-15 20:22 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2014-02-15 20:20:05 PST
The scope of this bug is to encapsulate the instantiation of VisibleSelection into FrameSelection so that we may optimize them away later.
Ryosuke Niwa
Comment 2 2014-02-15 20:22:30 PST
Created attachment 224313 [details] Fixes the bug
Andreas Kling
Comment 3 2014-02-16 13:24:27 PST
Comment on attachment 224313 [details] Fixes the bug r=me
WebKit Commit Bot
Comment 4 2014-02-16 13:55:11 PST
Comment on attachment 224313 [details] Fixes the bug Clearing flags on attachment: 224313 Committed r164194: <http://trac.webkit.org/changeset/164194>
WebKit Commit Bot
Comment 5 2014-02-16 13:55:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.