setSelectionRange shouldn't directly instantiate VisibleSelection https://bugs.webkit.org/show_bug.cgi?id=128881

Reviewed by Andreas Kling.

Added a new version of moveTo for setSelectionRange.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::moveTo): Added.
* editing/FrameSelection.h:
* html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::setSelectionRange): Use the newly added FrameSelection::moveTo
instead of manually instantiating VisibleSelection here.


Canonical link: https://commits.webkit.org/146925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164194 268f45cc-cd09-0410-ab3c-d52691b4dbfc